objects/ID_Cards_Repeatable__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>HYPERLINK(ID_Cards_Tracking_ID__r.Implementation_Tracking_ID__r.Id,ID_Cards_Tracking_ID__r.Implementation_Tracking_ID__r.Account_Legal_Name__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>ID_Cards_Tracking_ID__r.Implementation_Tracking_ID__r.Claim_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_ID_Card_Requirements_Sent_To_IC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date ID Card Requirements Sent To IC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Implementations_Notified_Of_Sale__c</fullName>
        <formula>ID_Cards_Tracking_ID__r.Implementation_Tracking_ID__r.Date_Implementations_Notified_Of_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Implementations Notified Of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Mockup_Audit_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Peer Mockup Audit Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Peer_Mockup_Audit_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Peer Mockup Audit Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_From_Assignment__c</fullName>
        <formula>ID_Cards_Tracking_ID__r.Implementation_Tracking_ID__r.Days_From_Assignment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>HYPERLINK(ID_Cards_Tracking_ID__r.Implementation_Tracking_ID__r.Id,ID_Cards_Tracking_ID__r.Implementation_Tracking_ID__r.Group_Number__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Card_Overall_Status__c</fullName>
        <formula>Text(ID_Cards_Tracking_ID__r.ID_Card_Overall_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Card Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Cards_Tracking_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ID Cards Tracking ID</label>
        <referenceTo>ID_Cards__c</referenceTo>
        <relationshipLabel>ID Cards Repeatable</relationshipLabel>
        <relationshipName>ID_Cards_Repeatable</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <formula>ID_Cards_Tracking_ID__r.Implementation_Tracking_ID__r.Implementation_Case_Name1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>ID_Cards_Tracking_ID__r.Implementation_Tracking_ID__r.Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking_ID__c</fullName>
        <formula>HYPERLINK(ID_Cards_Tracking_ID__r.Id, ID_Cards_Tracking_ID__r.Implementation_Tracking_ID__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Tracking ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>ID_Cards_Tracking_ID__r.Implementation_Tracking_ID__r.Implementation_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_ID_Card_Req_Gathering_Applicable__c</fullName>
        <label>Is ID Card Req Gathering Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mockups_Sent_For_Approval__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mockups Sent For Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName + Owner:Queue.QueueName</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <formula>ID_Cards_Tracking_ID__r.Implementation_Tracking_ID__r.Production_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>ID_Cards_Tracking_ID__r.Implementation_Tracking_ID__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <label>ID Cards Repeatable</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ID_Cards_Local_ID_Cards_Repeatable</fullName>
        <filterScope>Queue</filterScope>
        <label>ID Cards - Local</label>
        <queue>ID_Cards_Local</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ID_Cards_National_ID_Cards_Repeatable</fullName>
        <filterScope>Queue</filterScope>
        <label>ID Cards - National</label>
        <queue>ID_Cards_National</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>IDCARDREPEAT-{000000}</displayFormat>
        <label>ID Cards Repeatable Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ID Cards Repeatable</pluralLabel>
    <recordTypes>
        <fullName>National_NASCO_and_WGS</fullName>
        <active>true</active>
        <label>National NASCO and WGS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>